# VLP

./: .gitignore  .gitmodules  README.md  degradation.ipynb  demo.py  experiment.py  experiment_timeseries.py  find_led_center.py  graphs.ipynb  heatmap.ipynb  pyproject.toml  quant.ipynb  requirements.txt  results.md  test.ipynb  testing copy.ipynb  testing.ipynb
dataset/: __init__.py  augment.py  clean.py  convert.py  downsample.py  heatmap.py  heatmap_to_dataset.py  led_age_series.py  led_age_series_util.py  led_age_simulation.py  util.py
models/: __init__.py  base.py  mlp.py  mlp_online.py  mlp_online_pico.py  pico_interface.py  residual_mlp_online.py  rf.py
utils/: task_registry.py
